[gd_scene load_steps=5 format=2]

[ext_resource path="res://finalBoss.gd" type="Script" id=1]
[ext_resource path="res://ZA WARUDO.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.4142, 30.6685 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.2045, 33.4588 )

[node name="finalBoss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.67775, 0.853714 )
offset = Vector2( -0.67775, -0.853714 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -33.7577, -7.44127 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="finalAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 1.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="finalAttack" to="." method="_on_finalAttack_finished"]
